update img path/ node

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -10,7 +10,7 @@
       rgba($primary-color, 0.9),
       rgba($primary-color, 0.3)
     ),
-    url("/dist/img/model-1.jpg") center;
+    url("../img/model-1.jpg") center;
   background-size: cover;
   h2 {
     font-size: 2rem;
