--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
 }
 .home__name {
@@ -274,7 +274,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center;
+  background: linear-gradient(to right, rgba(39, 39, 39, 0.9), rgba(39, 39, 39, 0.3)), url("../img/model-1.jpg") center top;
   background-size: cover;
 }
 .contact h2 {
@@ -335,12 +335,34 @@
   }
 }
 @media screen and (min-width: 1024px) {
-  .projects .contact__list {
-    grid-template-columns: repeat(3, 1fr);
-  }
   .projects__items {
     grid-template-columns: repeat(3, 1fr);
     width: 150vh;
+  }
+
+  .about .jobs {
+    width: 80vw;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .about .jobs {
+    width: 80vw;
+  }
+}
+@media screen and (max-width: 600px) {
+  .projects__items {
+    width: 30vh;
+  }
+  .projects footer {
+    transform: rotate(90deg) translate(-2rem, -4rem);
+    margin: 1rem;
+  }
+
+  .about .jobs {
+    width: 60vw;
+  }
+  .about footer {
+    transform: rotate(90deg) translate(-2.5rem, -3rem);
   }
 }
 body {
